Moving gradle library dependencies version contro to root build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "API_KEY", "\"0c1d44a15c80de023668a6063467aff9\""
     }
     buildTypes {
         release {
@@ -20,9 +21,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "androidx.appcompat:appcompat:${rootProject.ext.androidx_appcompat}"
+    implementation "androidx.constraintlayout:constraintlayout:${rootProject.ext.androidx_constraintlayout}"
+    implementation "androidx.room:room-runtime:${rootProject.ext.androidx_room_version}"
+
+    annotationProcessor "androidx.room:room-compiler:${rootProject.ext.androidx_room_version}"
+
+    testImplementation "junit:junit:${rootProject.ext.test_junit}"
+
+    androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.androidx_test_junit}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${rootProject.ext.androidx_test_espresso}"
+
 }
