--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,15 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+    ext.androidx_room_version = '2.0.0'
+    ext.androidx_appcompat = '1.1.0'
+    ext.androidx_constraintlayout= '1.1.3'
+    ext.androidx_room= '2.2.3'
+    ext.androidx_test_espresso= '3.2.0'
+    ext.androidx_test_junit= '1.1.1'
+    ext.test_junit= '4.12'
+
 }
 
 allprojects {
