--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,11 @@ buildscript {
     ext.androidx_appcompat = '1.1.0'
     ext.androidx_constraintlayout= '1.1.3'
     ext.androidx_room= '2.2.3'
+    ext.androidx_paging_version='2.1.1'
     ext.androidx_test_espresso= '3.2.0'
     ext.androidx_test_junit= '1.1.1'
-    ext.test_junit= '4.12'
 
+    ext.test_junit= '4.12'
 }
 
 allprojects {
