--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,13 @@ buildscript {
         // in the individual module build.gradle files
     }
 
-    ext.androidx_room_version = '2.0.0'
     ext.androidx_appcompat = '1.1.0'
     ext.androidx_constraintlayout= '1.1.3'
-    ext.androidx_room= '2.2.3'
+    ext.androidx_room_version= '2.2.3'
     ext.androidx_paging_version='2.1.1'
     ext.androidx_test_espresso= '3.2.0'
     ext.androidx_test_junit= '1.1.1'
+    ext.androidx_core_testing= '2.1.0'
 
     ext.test_junit= '4.12'
 }
@@ -31,7 +31,6 @@ allprojects {
         
     }
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
