Adding lifecycle dependencies.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:${rootProject.ext.androidx_appcompat}"
     implementation "androidx.constraintlayout:constraintlayout:${rootProject.ext.androidx_constraintlayout}"
+    implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.androidx_lifecycle}"
     implementation "androidx.room:room-runtime:${rootProject.ext.androidx_room_version}"
     implementation "androidx.paging:paging-runtime:${rootProject.ext.androidx_paging_version}"
 
