--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    dataBinding {
+        enabled = true
+    }
 }
 configurations.all {
     resolutionStrategy.eachDependency { details ->
@@ -55,11 +58,13 @@ configurations.all {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:${rootProject.ext.androidx_appcompat}"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.constraintlayout:constraintlayout:${rootProject.ext.androidx_constraintlayout}"
     implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.androidx_lifecycle}"
     implementation "androidx.room:room-runtime:${rootProject.ext.androidx_room_version}"
     implementation "androidx.paging:paging-runtime:${rootProject.ext.androidx_paging_version}"
 
+    annotationProcessor "androidx.room:room-compiler:$androidx_room_version"
     annotationProcessor "androidx.room:room-compiler:${rootProject.ext.androidx_room_version}"
 
     testImplementation "junit:junit:${rootProject.ext.test_junit}"
